--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-masked-input": "^0.5.2",
     "vue-router": "^3.0.3",
     "vue-sweetalert2": "^2.1.1",
+    "vue-the-mask": "^0.11.1",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
