--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "electron-vue-learning",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "electron-builder build --win --publish never",
+    "deploy": "electron-builder build --win --publish always",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "electron-updater": "^4.1.2",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
@@ -41,5 +42,9 @@
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
-  }
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/pilatae66/ApiagClient.git"
+  },
 }
