--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "electron-vue-learning",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "build": "electron-builder build --win --publish never",
     "deploy": "electron-builder build --win --publish always",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
+    "electron:build": "vue-cli-service electron:build --win --publish always",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "src/background.js",
+  "main": "background.js",
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
