--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-vue-learning",
-  "version": "1.7.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "build": "electron-builder build --win --publish never",
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "electron-updater": "^4.1.2",
+    "moment": "^2.24.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
